--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "config": "^3.3.1",
     "js-yaml": "^3.14.0",
+    "node-open-protocol": "^1.1.1",
     "vrpc": "^2.1.4"
   }
 }
